public/assets/stylesheets/style.css
/* ... */
#helpbar-sticky:checked + .helpbar .helpbar-widgets {
  max-height: 1000px;
}
section.contentbox {
  border-color: #d0d7e3;
  border-style: solid;
  border-width: 1px;
  margin-bottom: 10px;
  -webkit-transition: all 300ms ease 0s;
  -moz-transition: all 300ms ease 0s;
  -o-transition: all 300ms ease 0s;
  transition: all 300ms ease 0s;
}
section.contentbox header {
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-box-flex;
  display: -webkit-flex;
  display: -moz-box;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 2px;
  background-color: #e7ebf1;
}
section.contentbox header h1 {
  padding: 5px;
  margin: 0;
  color: #28497c;
  border-bottom: none;
  font-size: medium;
}
section.contentbox header h1 > a img,
section.contentbox header h1 > a svg {
  margin-right: 5px;
}
section.contentbox header > nav {
  text-align: right;
  padding: 2px;
  display: flex;
  align-items: center;
}
section.contentbox footer:empty {
  display: none !important;
}
section.contentbox footer {
  text-align: center;
  border-color: #d0d7e3;
  border-top-style: solid;
  border-width: 1px;
  background-color: white;
}
section.contentbox section {
  padding: 10px;
}
section.contentbox table.default {
  margin-bottom: 0;
}
section.contentbox table.default tbody tr:last-child td {
  border-bottom: none;
}
section.contentbox > article {
  border-color: #d0d7e3;
  border-style: solid;
  border-width: 1px;
  margin: 10px;
}
section.contentbox > article > p,
section.contentbox > article > section,
section.contentbox > article > footer,
section.contentbox > article > div {
  max-height: 0px;
  opacity: 0;
  overflow: auto;
  -webkit-transition: opacity 0.3s;
  -moz-transition: opacity 0.3s;
  -o-transition: opacity 0.3s;
  transition: opacity 0.3s;
}
section.contentbox > article > p,
section.contentbox > article > footer,
section.contentbox > article > div {
  padding: 0 10px 0 10px;
}
section.contentbox > article div,
section.contentbox > article p {
  margin: 0;
}
section.contentbox > article section {
  border-width: 0;
  margin-top: 0;
  margin-bottom: 0;
  padding: 0;
}
section.contentbox > article section article {
  border: none;
}
section.contentbox > article section header {
  background: transparent;
}
section.contentbox > article section header h1 {
  text-align: center;
  font-size: small;
  width: 100%;
  font-weight: bold;
  color: black;
}
section.contentbox > article section > article {
  padding: 5px;
}
section.contentbox > article section article time {
  float: right;
  font-size: smaller;
  margin: 2px;
}
section.contentbox > article header h1 a {
  display: flex;
  align-items: center;
}
section.contentbox > article header h1 a::before {
  background-repeat: no-repeat;
  content: ' ';
  display: inline-block;
  height: 16px;
  margin-right: 0;
  background-image: url("../images/icons/blue/arr_1right.svg");
  -webkit-background-size: 16px 16px;
  -moz-background-size: 16px 16px;
  -o-background-size: 16px 16px;
  background-size: 16px 16px;
  vertical-align: text-top;
  width: 16px;
}
section.contentbox > article header h1 a:before {
  -webkit-transition: all 200ms ease 0s;
  -moz-transition: all 200ms ease 0s;
  -o-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
  margin-right: 2px;
}
section.contentbox > article header nav a,
section.contentbox > article header nav span {
  display: inline-block;
  vertical-align: middle;
}
section.contentbox > article header nav span {
  display: inline-block;
  border-right: 1px solid #899bba;
  padding: 0px 5px;
}
section.contentbox > article header nav span:last-child {
  border-right: none;
  padding-right: 0px;
}
section.contentbox > article header nav a {
  padding-left: 5px;
  align-items: center;
  display: flex;
}
section.contentbox > article footer {
  text-align: center;
  border-color: #d0d7e3;
  border-top-style: none;
  border-width: 1px;
  background-color: white;
}
section.contentbox > article footer h1 {
  font-size: 1em;
  font-weight: bold;
  border: none;
  padding: 0;
}
section.contentbox > article footer article.comment {
  border: 0;
  border-top: 1px solid #c5c7ca;
  max-width: 1260px;
  margin: auto;
  margin-bottom: 4px;
  text-align: left;
}
section.contentbox > article footer article.comment h1 {
  margin-bottom: 0px;
}
section.contentbox > article footer article.comment time {
  float: right;
  font-size: 0.8em;
  color: #c5c7ca;
}
section.contentbox > article:not(.open) header ~ * {
  max-height: 0px;
  opacity: 0;
  overflow: auto;
  -webkit-transition: opacity 0.3s;
  -moz-transition: opacity 0.3s;
  -o-transition: opacity 0.3s;
  transition: opacity 0.3s;
}
section.contentbox > article.open > p,
section.contentbox > article.open > section,
section.contentbox > article.open > footer,
section.contentbox > article.open > div {
  max-height: none;
  opacity: 1;
  -webkit-transition: opacity 0.3s;
  -moz-transition: opacity 0.3s;
  -o-transition: opacity 0.3s;
  transition: opacity 0.3s;
}
section.contentbox > article.open footer {
  border-top-style: solid;
}
section.contentbox > article.open header h1 a::before {
  -webkit-transform: rotate(90deg);
  -moz-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  -o-transform: rotate(90deg);
  transform: rotate(90deg);
}
section.contentbox > article.new header h1 a::before {
  background-repeat: no-repeat;
  content: ' ';
  display: inline-block;
  height: 16px;
  margin-right: 0;
  background-image: url("../images/icons/red/arr_1right.svg");
  -webkit-background-size: 16px 16px;
  -moz-background-size: 16px 16px;
  -o-background-size: 16px 16px;
  background-size: 16px 16px;
  vertical-align: text-top;
  width: 16px;
}
#header .badge {
  position: relative;
}
/* ... */

